# zinc

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: transcribe_moonshine.py  transcribe_parakeet.py
src-tauri/src/: commands.rs  config.rs  deno_manager.rs  lib.rs  main.rs  network.rs  sherpa_manager.rs  transcription_manager.rs  whisper.rs  whisper_manager.rs  ytdlp.rs  ytdlp_manager.rs
src-tauri/src/transcription/: engine.rs  mod.rs  moonshine.rs  parakeet.rs  whisper_cpp.rs  whisper_rs_engine.rs
src/components/: DownloadCard.tsx  DownloadList.tsx  DownloadRow.tsx  DownloadsSection.tsx  DownloadsTray.tsx  Icons.tsx  LocalTranscribeCard.tsx  ProgressBar.tsx  ProgressRing.tsx  Settings.tsx  Toast.tsx  URLInput.tsx  VideoCard.tsx  VideoPreview.tsx
src/hooks/: useDownload.ts  useSettings.ts  useTheme.ts  useToast.ts
src/lib/: constants.ts  tauri.ts  types.ts  utils.ts
