[package]
name = "zinc"
version = "0.1.0"
description = "A minimal, beautiful video download app"
authors = ["Zinc"]
license = "MIT"
repository = "https://github.com/zincdl/zinc"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "zinc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
regex = "1"
dirs = "5"
opener = "0.7"
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
zip = "0.6"
async-trait = "0.1"
hound = "3.5"
tar = "0.4"
bzip2 = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.15", features = ["cuda"] }
ipconfig = "0.3"

[target.'cfg(not(target_os = "windows"))'.dependencies]
whisper-rs = { version = "0.15" }
